; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Cedar.c_StopCedarLog.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Cedar.c_StopCedarLog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cedar_log_ref = common dso_local global i32* null, align 8
@cedar_log = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @StopCedarLog() #0 {
  %1 = load i32*, i32** @cedar_log_ref, align 8
  %2 = icmp eq i32* %1, null
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %11

4:                                                ; preds = %0
  %5 = load i32*, i32** @cedar_log_ref, align 8
  %6 = call i64 @Release(i32* %5)
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %4
  %9 = load i32*, i32** @cedar_log, align 8
  %10 = call i32 @FreeLog(i32* %9)
  store i32* null, i32** @cedar_log, align 8
  store i32* null, i32** @cedar_log_ref, align 8
  br label %11

11:                                               ; preds = %3, %8, %4
  ret void
}

declare dso_local i64 @Release(i32*) #1

declare dso_local i32 @FreeLog(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
